src/styles/index.scss
// @import 'bootstrap/scss/_bootstrap.scss';

// /*!
//  * Bootstrap v4.5.0 (https://getbootstrap.com/)
//  * Copyright 2011-2020 The Bootstrap Authors
//  * Copyright 2011-2020 Twitter; Inc.
//  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
//  */

@import "fonts";
@import "bootstrap/scss/_functions.scss";
@import "custom";
@import "bootstrap/scss/_variables.scss";
@import "bootstrap/scss/_mixins.scss";
@import "bootstrap/scss/_root.scss";
@import "bootstrap/scss/_reboot.scss";
@import "bootstrap/scss/_type.scss";
@import "bootstrap/scss/_images.scss";
@import "bootstrap/scss/_code.scss";
@import "bootstrap/scss/_grid.scss";
// @import "bootstrap/scss/_tables.scss";
@import "bootstrap/scss/_forms.scss";
@import "bootstrap/scss/_buttons.scss";
@import "bootstrap/scss/_transitions.scss";
@import "bootstrap/scss/_dropdown.scss";
// @import "bootstrap/scss/_button-group.scss";
// @import "bootstrap/scss/_input-group.scss";
@import "bootstrap/scss/_custom-forms.scss";
@import "bootstrap/scss/_nav.scss";
@import "bootstrap/scss/_navbar.scss";
@import "bootstrap/scss/_card.scss";
// @import "bootstrap/scss/_breadcrumb.scss";
// @import "bootstrap/scss/_pagination.scss";
@import "bootstrap/scss/_badge.scss";
@import "bootstrap/scss/_jumbotron.scss";
// @import "bootstrap/scss/_alert.scss";
// @import "bootstrap/scss/_progress.scss";
// @import "bootstrap/scss/_media.scss";
// @import "bootstrap/scss/_list-group.scss";
@import "bootstrap/scss/_close.scss";
// @import "bootstrap/scss/_toasts.scss";
@import "bootstrap/scss/_modal.scss";
// @import "bootstrap/scss/_tooltip.scss";
// @import "bootstrap/scss/_popover.scss";
// @import "bootstrap/scss/_carousel.scss";
// @import "bootstrap/scss/_spinners.scss";
@import "bootstrap/scss/_utilities.scss";
@import "bootstrap/scss/_print.scss";

@import "animations";
@import "methodology";
@import "system-map";
@import "issues";

// --- Debug CSS ---
// .display-1 {
//   font-size: 5rem;
//   line-height: 1;
// }

// --- End Debug ---


// --- BAIL REFORM CUSTOM CSS ---------

// --- Animations ---------
.heartbeat {
  animation: 1.5s heartbeat ease infinite;
}

// --- Transitions ---------
@mixin transition-300 {
  -webkit-transition: all 300ms ease-out;
  -moz-transition: all 300ms ease-out;
  -o-transition: all 300ms ease-out;
  transition: all 300ms ease-out;
}

// --- Typography ---------
h1, h2, h3, h4, h5, h6 {
  font-family: $font-family-headings;
}

.display-3, .display-4 {
  line-height: 1.4;
}

.uppercase {
  text-transform: uppercase;
}

// --- Header ---------
.brand {
  text-transform: uppercase;
  font-size: $font-size-base * 2;
  display: inline-block;
  margin-left: 10px;
  margin-bottom: 0;
  vertical-align: middle;
}

.nav-dropdown {
  .dropdown-menu {
    background: $dark !important;
  }

  .dropdown-item, .dropdown-item:active {
    display: block;
    width: auto;
    background: $dark !important;
    padding: 0.6rem 1.2 rem;
  }

  .dropdown-item:focus, .dropdown-item:hover {
    background: $rust !important;
    color: $light !important;
  }
}

.beta-sticker {
  position: absolute;
  width: 392px;
  top: 4.5rem;
  left: 5%;
  padding: 1rem;
  -moz-transform: rotate(1.33deg);
  -webkit-transform: rotate(1.33deg);
  -o-transform: rotate(1.33deg);
  -ms-transform: rotate(1.33deg);
  transform: rotate(1.33deg);

  &.modal {
    z-index: 1;
  }
  
  .modal-content, .modal-header, .modal-footer {
    border-radius: 0;
    border: none;
    background: $green;
  }

  .modal-header {
    padding: 0.25rem 1rem 0;
  }

  .modal-body {
    padding: 0.25rem 1rem;
    top: -1px;
  }

  .modal-footer {
    padding-top: 0;
    top: -2px;
  }
  
}

// --- Modifying Layout Components ---------
body.modal-open {
  overflow: auto !important;
}

.align-contents-bottom {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  top: 0;
}

.min-height-3rem {
  min-height: 3rem;
}
  
.container-fill {
  height: calc(100vh - 112px);
}

.graphicContainer {
  padding: 40vh 2vw 70vh;
  display: flex;
  justify-content: space-between;
}

.crooked-box {
  position: relative;
  z-index: 2;

  &:before {
    content: '';
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: absolute;
    background: $light;
    transform: rotate(0.85deg);
    z-index: -1;
  }
}

.dropdown-menu {
  background: darken($dark, 10);
}

a.dropdown-item {
  background: darken($dark, 10);
  color: $rust;

  &:hover {
    background: darken($dark, 15);
    color: $pink;
  }
}

// --- End Layout Component Mods ---------


// --- Interactions Styling ---------
.graphic {
  flex-basis: 60%;
  position: sticky;
  width: 100%;
  padding: 5rem 0;
  top: 160px;
  align-self: flex-start;
  background-color: #aaa;
  & p {
    font-size: 5rem;
    text-align: center;
    color: #fff;
  }
}

.scroller {
  flex-basis: 35%;
}

.step {
  margin: 0 auto 2rem auto;
  padding: 100px;
  height: 450px;
  border: 1px solid #333;
  & p {
    text-align: center;
    font-size: 1.5rem;
  }
  &:last-child {
    margin-bottom: 0;
  }
}
// --- End Interactions Styling ---------


// --- Homepage Styling ---------

// New styling for jumbotron
.hero {
  background-color: $light;
  position: relative;
  // padding-top: 3rem; // Only needed if navbar is set to "fixed=top" vs. "sticky=top"
  padding-bottom: 0;
}

.hero-em {
  color: $light;
  position: relative;
  display: inline-block;
  z-index: 2;

  &:before {
    position: absolute;
    content: '';
    top: 4px;
    left: 0;
    height: 100%;
    width: 100%;
    background: $dark;
    transform: rotate(2deg);
    z-index: -1;
  }
}
// --- End Homepage Styling ---------

